# ara

./: .gitignore  Cargo.toml  README.md  diesel.toml
ara-admin/: Cargo.toml
ara-admin-api/: Cargo.toml
ara-admin-api/src/: app.rs  lib.rs  main.rs
ara-admin-api/src/core/: user.rs
ara-admin-api/src/shared/: mod.rs
ara-admin-api/tests/: lib.rs
ara-admin-api/tests/core/: user_test.rs
ara-admin-ui/: README.md  angular.json  package-lock.json  package.json
ara-admin-ui/e2e/src/: app.e2e-spec.ts
ara-admin-ui/src/: index.html  karma.conf.js
ara-admin-ui/src/app/: app.component.spec.ts  app.component.ts
ara-admin/src/: app.rs  lib.rs  main.rs
ara-admin/src/core/user/: mod.rs  service.rs  web.rs
ara-admin/src/service/core/: user.rs
ara-admin/src/shared/: context.rs  error.rs  error_logger.rs  mod.rs
ara-admin/src/web/core/: role.rs  user.rs
ara-admin/tests/: lib.rs  shared.rs
ara-admin/tests/core/: mod.rs  user_test.rs
ara-admin/tests/core/user/: mod.rs
ara-client-api/: Cargo.toml
ara-client-api/src/: app.rs  main.rs
ara-client-api/src/core/user/: mod.rs  web.rs
ara-client-api/src/core/user/service/: activation.rs  login.rs  mod.rs  password_change.rs  password_reset.rs  profile.rs  signup.rs
ara-client-api/src/shared/: context.rs  error.rs  jwt.rs  mod.rs  result.rs  session_store.rs
ara-client-api/tests/: lib.rs  shared.rs
ara-client-api/tests/core/: user_test.rs
ara-client-ui/: README.md  angular.json  package-lock.json  package.json
ara-client-ui/e2e/src/: app.e2e-spec.ts
ara-client-ui/src/: index.html  karma.conf.js
ara-client-ui/src/app/: app.component.spec.ts  app.component.ts
ara-codegen/src/diesel_string_enum/: mod.rs
ara-common/: Cargo.toml
ara-common/src/: config.rs  context.rs  db.rs  error.rs  lib.rs  template.rs  utils.rs
ara-e2e-tests/: Cargo.toml
ara-e2e-tests/src/: app.rs  context.rs  db.rs  email.rs  lib.rs
ara-e2e-tests/tests/: lib.rs
ara-e2e-tests/tests/core/: user_tests.rs
ara-e2e-tests/tests/shared/: mod.rs  server.rs
ara-error/: Cargo.toml
ara-error-macros/: Cargo.toml
ara-error-macros/src/: api_error.rs  from_error.rs  http_response.rs  http_status.rs  lib.rs
ara-error/src/: lib.rs
ara-model/: Cargo.toml  cargo-expand.rs  user_expand.rs
ara-model/src/: db.rs  error.rs  lib.rs  schema.rs
ara-model/src/core/: mod.rs  model.rs  notification.rs  permission.rs  role.rs  user.rs  user_credential.rs
ara-model/src/shared/: mod.rs
ara-rocket-app/: Cargo.toml
ara-rocket-app/src/: app.rs  main.rs
ara-rocket-app/src/core/: role.rs  user.rs
ara-rocket-app/src/core/user/service/: activation.rs  login.rs  password_change.rs  signup.rs  user_service.rs
ara-rocket-app/src/shared/: context.rs  error.rs  jwt.rs  mod.rs
ara-rocket-app/tests/: lib.rs  shared.rs
ara-rocket-app/tests/core/: user_test.rs
ara-service/: .env  Cargo.toml
ara-service/src/: lib.rs
ara-service/src/core/: role.rs
ara-service/src/core/user/: activation.rs  login.rs  mod.rs  password_change.rs  password_reset.rs  signup.rs  user_service.rs
ara-service/src/shared/: config.rs  context.rs  db.rs  email.rs  error.rs  mod.rs  notification.rs  template.rs
ara-test-utils/: Cargo.toml
ara-tide-app/: Cargo.toml
ara-tide-app/src/: main.rs
ara-tide-app/src/core/: role.rs  user.rs
ara-tide-app/src/core/user/: mod.rs  service.rs  web.rs
ara-tide-app/src/shared/: db.rs  error.rs  jwt.rs  mod.rs  state.rs
ara-uaa/: Cargo.toml
ara-uaa/src/: main.rs
ara-uaa/src/support/: mod.rs
res/config/: default.toml  local-test.toml  local.toml  log4rs-test.yaml  log4rs.yaml
res/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
res/scripts/db/: clean.sql  seed.sql
res/src/: schema.rs
res/templates/email/: user_activation.hbs
