[package]
edition = "2018"
name = "ara-tests"
version = "0.1.0"
authors = ["Murali Mohan Rath <murali@mmrath.com>"]


[dependencies]
jsonpath= "0.1.1"
postgres= "0.15.2"
reqwest= "0.9.12"
parking_lot = { version = "0.7.1", features = ["nightly"] }
assert_cmd = "0.11.0"
env_logger= "0.6.1"
serde = "1.0.89"
serde_json = "1.0.39"
lazy_static= "1.3.0"
dotenv= "0.13.0"
zip = "0.5.1"
regex= "1.1.2"
once_cell= "0.1.8"
