[package]
edition = "2018"
name = "ara-rocket-app"
version = "0.1.0"
authors = ["Murali Mohan Rath <murali@mmrath.com>"]

[lib]
name = "ara_app"
path = "src/lib.rs"

[[bin]]
name = "ara_app"
path = "src/main.rs"

[dependencies]
log = "0.4.6"
log4rs = "0.8.1"
chrono = { version = "0.4.6", features = ["serde"] }
dotenv= "0.13.0"
failure= "0.1.5"
serde= "1.0.89"
serde_json = "1.0.39"
ara-error={version = "^0.1", path = "../ara-error"}
ara-model={version = "^0.1", path = "../ara-model"}
ara-service={version = "^0.1", path = "../ara-service"}
jsonwebtoken= "5.0.1"
once_cell = "0.1.8"
uuid="0.7.3"

[dependencies.rocket]
version = "0.4.0"
git = "https://github.com/SergioBenitez/Rocket"
default-features = false

[dependencies.rocket_contrib]
version = "0.4.0"
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json"]

[dev-dependencies]
env_logger= "0.6.1"
parking_lot={version="0.7.1", features=["nightly"]}
diesel="1.4"
